src/test/ui/issues/issue-11319.stderr
error[E0308]: match arms have incompatible types
  --> $DIR/issue-11319.rs:8:20
   |
LL | /     match Some(10) {
LL | |
LL | |         Some(5) => false,
   | |                    ----- this is found to be of type `bool`
LL | |
LL | |         Some(2) => true,
   | |                    ---- this is found to be of type `bool`
LL | |
LL | |         None    => (),
   | |                    ^^ expected bool, found ()
...  |
LL | |         _       => true
LL | |     }
   | |_____- `match` arms have incompatible types
   |
   = note: expected type `bool`
              found type `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
